--- a/vue-practice1/package.json
+++ b/vue-practice1/package.json
@@ -11,10 +11,18 @@
     "build": "node build/build.js"
   },
   "dependencies": {
+    "axios": "^0.18.0",
+    "element-ui": "^2.4.4",
     "less": "^3.5.3",
+    "mint-ui": "^2.2.13",
+    "node-sass": "^4.5.1",
+    "sass-loader": "^6.0.3",
     "sass-resources-loader": "^1.3.3",
+    "scss": "^0.2.4",
+    "scss-loader": "^0.0.1",
     "vue": "^2.5.2",
     "vue-concise-slider": "^2.4.8",
+    "vue-infinite-loading": "^2.3.1",
     "vue-router": "^3.0.1",
     "vue-swiper-component": "^2.1.2",
     "vuex": "^3.0.1"
@@ -32,7 +40,7 @@
     "babel-preset-stage-2": "^6.22.0",
     "chalk": "^2.0.1",
     "copy-webpack-plugin": "^4.0.1",
-    "css-loader": "^0.28.0",
+    "css-loader": "^0.28.11",
     "eslint": "^4.15.0",
     "eslint-config-standard": "^10.2.1",
     "eslint-friendly-formatter": "^3.0.0",
